1.1000 2015-03-20
 - More POD thanks to Nathan Handy.
 - Removed FQL, since it has been removed from the official Facebook Graph API as of version 2.1. 

1.0900 2014-12-25
 - Replace Any::Moose in favor of Moo.

1.0801 2014-09-07
 - Fix for hash randomization thanks to syohex.

1.0800 2014-09-07
 - Added Facebook::Graph::Feed thanks to hurricup.
 - Fix failed test 'exception gives good detail' thanks to guillaumeaubert.
 - More tests.

1.0700 2014-05-30
 - POD fixes thanks to dsteinbrunner
 - fix typos thanks to dsteinbrunner
 - Added request_extended_access_token thanks to srchulo
 - Improved error message on access token expiration.

1.0600 2013-05-13
 - Added the $fb->request() method.

1.0502 2013-05-07
 - Added AnyEvent::TLS as a prereq. Should get rid of the CPAN complaints about not having TLS.

1.0501 2013-05-06
 - Fixed a version number issue with AnyEvent::HTTP::LWP::UserAgent thanks to Rsrchboy.
 - Now pulling contributors list from git thanks to Rsrchboy.
 - Fixed some problems with add_photo() thanks to Sebastian Wernerus.

1.0500 2012-11-15
 - Added batch requests. Thanks to fayland.
 - Fix: Facebook no longer allows public queries. Thanks to spazm.
 - Added authentication test.
 - Fixed some other failing tests due to Facebook changes.
 - Started making Facebook::Graph async. Still working deciding on callback API, so left out true async in this release.
 - WARNING: "ua" method no longer available from Facebook::Graph.

1.0401 2012-05-07
 - Added impersonation recipe.

1.0400 2012-04-11
 - Added a date format option to find. Thanks to jwieland.
 - Added better FQL handling. Thanks to vielmath.
 - Added photo publishing. Thanks to c0decafe.
 - Documented the "ua" parameter on Facebook::Graph->new().
 - Replaced URI::Encode with URI::Escape.
 - Fixed a failing test due to changes in the Facebook API.

1.0301 2011-10-18
 - Merged custom user agent. Thanks to typester.

1.0300 2011-04-30
 - Merged 'properties' in Post graph from Fayland Lam.