@@ -9,7 +9,7 @@ die "You need to set an environment variable for FB_ACCESS_TOKEN to test this" u
 
 $fb->access_token($ENV{FB_ACCESS_TOKEN});
 
-my $sarah = eval{$fb->fetch('sarahbownds')};
+my $sarah = eval{$fb->fetch(767598108)};
 use Data::Dumper;
 die Dumper($@) if $@;
 ok(ref $sarah eq 'HASH', 'got a hash ref back');
