@@ -9,7 +9,7 @@ die "You need to set an environment variable for FB_ACCESS_TOKEN to test this" u
 
 $fb->access_token($ENV{FB_ACCESS_TOKEN});
 
-my $response = $fb->add_post('jt.smith.169')
+my $response = $fb->add_post('1647395831')
     ->set_message('This is a test post of the Facebook::Graph perl module with epoch: '.time())
     ->publish;
 my $out = $response->as_hashref;
